[gd_scene load_steps=9 format=3 uid="uid://drd1dqk0640df"]

[ext_resource type="Script" uid="uid://bhsn2bxxnj3h7" path="res://scenes/world/starting_town/mage_association.gd" id="1_mage"]
[ext_resource type="PackedScene" uid="uid://dportal001" path="res://scenes/objects/dungeon_portal.tscn" id="2_dportal"]
[ext_resource type="Script" uid="uid://cjvhlm8rb5y0x" path="res://scripts/components/interactable.gd" id="3_interactable"]

[sub_resource type="Environment" id="Environment_1"]
background_mode = 1
background_color = Color(0.15, 0.12, 0.1, 1)
ambient_light_source = 2
ambient_light_color = Color(0.7, 0.65, 0.55, 1)
ambient_light_energy = 0.5

[sub_resource type="StandardMaterial3D" id="mat_floor"]
albedo_color = Color(0.35, 0.3, 0.28, 1)

[sub_resource type="StandardMaterial3D" id="mat_carpet"]
albedo_color = Color(0.5, 0.2, 0.2, 1)

[sub_resource type="StandardMaterial3D" id="mat_wall"]
albedo_color = Color(0.5, 0.45, 0.42, 1)

[sub_resource type="StandardMaterial3D" id="mat_wood"]
albedo_color = Color(0.4, 0.3, 0.2, 1)

[node name="MageAssociation" type="Node3D"]
script = ExtResource("1_mage")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0)
light_color = Color(1, 0.9, 0.7, 1)
light_energy = 1.5
omni_range = 12.0

[node name="OmniLight3D2" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 3, -5)
light_color = Color(0.7, 0.7, 1, 1)
light_energy = 0.8
omni_range = 6.0

[node name="OmniLight3D3" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 3, -5)
light_color = Color(0.7, 0.7, 1, 1)
light_energy = 0.8
omni_range = 6.0

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]

[node name="Interior" type="Node3D" parent="NavigationRegion3D"]

[node name="Floor" type="CSGBox3D" parent="NavigationRegion3D/Interior"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 2.5729675)
use_collision = true
size = Vector3(14, 0.2, 15.145935)
material = SubResource("mat_floor")

[node name="Carpet" type="CSGBox3D" parent="NavigationRegion3D/Interior"]
use_collision = true
size = Vector3(6, 0.05, 8)
material = SubResource("mat_carpet")

[node name="WallBack" type="CSGBox3D" parent="NavigationRegion3D/Interior"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, -5)
use_collision = true
size = Vector3(14, 5, 0.5)
material = SubResource("mat_wall")

[node name="WallLeft" type="CSGBox3D" parent="NavigationRegion3D/Interior"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 2.5, 0)
use_collision = true
size = Vector3(0.5, 5, 10)
material = SubResource("mat_wall")

[node name="WallRight" type="CSGBox3D" parent="NavigationRegion3D/Interior"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 2.5, 0)
use_collision = true
size = Vector3(0.5, 5, 10)
material = SubResource("mat_wall")

[node name="WallFrontLeft" type="CSGBox3D" parent="NavigationRegion3D/Interior"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 2.5, 5)
use_collision = true
size = Vector3(4, 5, 0.5)
material = SubResource("mat_wall")

[node name="WallFrontRight" type="CSGBox3D" parent="NavigationRegion3D/Interior"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 2.5, 5)
use_collision = true
size = Vector3(4, 5, 0.5)
material = SubResource("mat_wall")

[node name="Ceiling" type="CSGBox3D" parent="NavigationRegion3D/Interior"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)
use_collision = true
size = Vector3(14, 0.3, 10)
material = SubResource("mat_wood")

[node name="Furniture" type="Node3D" parent="NavigationRegion3D"]

[node name="Counter" type="CSGBox3D" parent="NavigationRegion3D/Furniture"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -3)
use_collision = true
size = Vector3(8, 1, 1)
material = SubResource("mat_wood")

[node name="Bookshelf1" type="CSGBox3D" parent="NavigationRegion3D/Furniture"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 1.5, -4)
use_collision = true
size = Vector3(1, 3, 2)
material = SubResource("mat_wood")

[node name="Bookshelf2" type="CSGBox3D" parent="NavigationRegion3D/Furniture"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 1.5, -4)
use_collision = true
size = Vector3(1, 3, 2)
material = SubResource("mat_wood")

[node name="QuestBoardFrame" type="CSGBox3D" parent="NavigationRegion3D/Furniture"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 2, -4.6)
use_collision = true
size = Vector3(2, 2.5, 0.2)
material = SubResource("mat_wood")

[node name="PlayerSpawn" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 3)

[node name="QuestBoard" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 2, -4)
collision_layer = 64
collision_mask = 2
script = ExtResource("3_interactable")
interaction_prompt = "[E] View Quest Board"

[node name="SkillTrainerNPC" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0.5, -2)

[node name="SpellVendorNPC" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0.5, -2)

[node name="EntrancePortal" parent="." instance=ExtResource("2_dportal")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8888438, 5.5)
portal_id = "entrance"
portal_type = 1
dungeon_id = "town_square"
destination_portal_id = "portal_mage"
portal_name = "Exit to Town"
portal_color = Color(0.2, 0.2, 0.8, 1)
